# inert

./: README.md  env.sh  package-lock.json  package.json
rpi-recognition/: classify.py  classify_object.sh  labels.txt  requirements.txt
src/: app.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backend.rs  drv8825.rs  esp32_cam.rs  inventory.rs  lib.rs  main.rs  plane.rs
src-tauri/src/backend/: rpi.rs  sim.rs
src-tauri/src/backend/rpi/: actuator.rs  cam_server.rs  drv8825.rs  esp32_cam.rs  limit.rs  magnet.rs
src-tauri/src/inventory/: allocator.rs  db.rs
src-tauri/src/inventory/allocator/: visualizer.rs
src-tauri/src/inventory/db/: sqlite.rs
src/bindings/: Direction.ts  DisplayItem.ts  PrepareAddItemStatus.ts  Rectangle.ts
src/routes/: +page.svelte  AddItemPopup.svelte  Item.svelte  Keyboard.svelte  Numpad.svelte  Overlay.svelte  RequestItemForm.svelte
src/routes/request_item/: +page.svelte
