[package]
name = "inert"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["rpi"]
rpi = ["rppal"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rppal = { version = "0.22.1", optional = true }
tokio = { version = "1.44.2", features = ["full"] }
tauri-plugin-dialog = "2"
thiserror = "2.0.12"
