cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "inert"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["rpi"]
rpi = []
sim = ["visualization"]
logging = []
visualization = ["eframe", "egui"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
trim-paths = "all" # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0"] # Better compile performance.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rppal = { version = "0.22.1" }
tokio = { version = "1.44.2", features = ["full"] }
tauri-plugin-dialog = "2"
thiserror = "2.0.12"
base64 = "0.22.1"
warp = "0.3.7"
tokio-util = "0.7.15"
async-stream = "0.3.6"
futures = "0.3.31"
bytes = "1.10.1"
ts-rs = "11.0.1"
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
directories-next = "2.0.0"
egui = { version = "0.32.0", optional = true }
eframe = { version = "0.32.0", optional = true }
rand = "0.9.2"
